fix: enable Pages via configure-pages@v5 (enablement: true) and update URLs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta property="og:title" content="Óticas Safe — Saúde visual com confiança e economia" />
   <meta property="og:description" content="Exame de vista gratuito, armação cortesia na compra das lentes corretivas e preços acessíveis. Agende sua avaliação." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/logo.jpeg" />
-  <meta property="og:url" content="https://SEU_USUARIO.github.io/otica-safe/" />
+  <meta property="og:image" content="https://gugol94.github.io/otica-safe/assets/img/logo.jpeg" />
+  <meta property="og:url" content="https://gugol94.github.io/otica-safe/" />
 
   <!-- Favicon -->
   <link rel="icon" href="assets/img/logo.jpeg" type="image/jpeg" />
