fix: update Facebook link to point to the correct page

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <div class="d-flex gap-3 justify-content-md-end">
               <a class="text-secondary" href="https://wa.me/5511989531046" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="bi bi-whatsapp fs-4"></i></a>
               <a class="text-secondary" href="https://www.instagram.com/oticasafe/" target="_blank" rel="noopener" aria-label="Instagram"><i class="bi bi-instagram fs-4"></i></a>
-              <a class="text-secondary" href="#" aria-label="Facebook"><i class="bi bi-facebook fs-4"></i></a>
+              <a class="text-secondary" href="https://www.facebook.com/people/%C3%93ticas-Safe/61581609264513" target="_blank" rel="noopener" aria-label="Facebook"><i class="bi bi-facebook fs-4"></i></a>
             </div>
           </div>
         </div>
