--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                 <div class="d-flex align-items-start gap-3 mb-3">
                   <i class="bi bi-telephone text-brand fs-3"></i>
                   <div>
-                    <h6 class="mb-1">Telefone</h6>
-                    <p class="mb-0"><a href="tel:+5511989531046" class="link-body-emphasis">+55 11 98953-1046</a></p>
+                    <h6 class="mb-1">Telefone (whatsapp)</h6>
+                    <p class="mb-0"><a href="https://wa.me/5511989531046" class="link-body-emphasis">+55 11 98953-1046</a></p>
                   </div>
                 </div>
                 <div class="d-flex align-items-start gap-3 mb-3">
@@ -272,7 +272,7 @@
             <div class="card h-100 shadow-sm">
               <div class="card-body p-4">
                 <h5 class="mb-3">Envie uma mensagem</h5>
-                <form action="https://formsubmit.co/guugool1@gmail.com" method="POST" class="row g-3">
+                <form action="https://formsubmit.co/Luminlab01@gmail.com" method="POST" class="row g-3">
                   <div class="col-md-6">
                     <label class="form-label" for="nome">Nome</label>
                     <input id="nome" name="nome" class="form-control" type="text" required />
